Revert "Rebase with opensearch-project main"