@@ -32,7 +32,11 @@
 
 package org.opensearch.cluster.metadata;
 
-import org.opensearch.core.Assertions;
+import com.carrotsearch.hppc.LongArrayList;
+import com.carrotsearch.hppc.cursors.IntObjectCursor;
+import com.carrotsearch.hppc.cursors.ObjectCursor;
+import com.carrotsearch.hppc.cursors.ObjectObjectCursor;
+import org.opensearch.Assertions;
 import org.opensearch.LegacyESVersion;
 import org.opensearch.Version;
 import org.opensearch.action.admin.indices.rollover.RolloverInfo;
@@ -45,34 +49,35 @@ import org.opensearch.cluster.block.ClusterBlockLevel;
 import org.opensearch.cluster.node.DiscoveryNodeFilters;
 import org.opensearch.cluster.routing.allocation.IndexMetadataUpdater;
 import org.opensearch.common.Nullable;
+import org.opensearch.common.collect.ImmutableOpenIntMap;
+import org.opensearch.common.collect.ImmutableOpenMap;
 import org.opensearch.common.collect.MapBuilder;
 import org.opensearch.common.compress.CompressedXContent;
-import org.opensearch.core.common.io.stream.StreamInput;
-import org.opensearch.core.common.io.stream.StreamOutput;
-import org.opensearch.core.common.io.stream.Writeable;
+import org.opensearch.common.io.stream.StreamInput;
+import org.opensearch.common.io.stream.StreamOutput;
+import org.opensearch.common.io.stream.Writeable;
 import org.opensearch.common.settings.Setting;
 import org.opensearch.common.settings.Setting.Property;
 import org.opensearch.common.settings.Settings;
+import org.opensearch.common.unit.TimeValue;
+import org.opensearch.common.xcontent.XContentFactory;
 import org.opensearch.common.xcontent.XContentHelper;
-import org.opensearch.core.common.Strings;
-import org.opensearch.core.xcontent.MediaTypeRegistry;
 import org.opensearch.core.xcontent.ToXContent;
 import org.opensearch.core.xcontent.ToXContentFragment;
 import org.opensearch.core.xcontent.XContentBuilder;
 import org.opensearch.core.xcontent.XContentParser;
 import org.opensearch.gateway.MetadataStateFormat;
-import org.opensearch.core.index.Index;
+import org.opensearch.index.Index;
 import org.opensearch.index.mapper.MapperService;
 import org.opensearch.index.seqno.SequenceNumbers;
-import org.opensearch.core.index.shard.ShardId;
+import org.opensearch.index.shard.ShardId;
 import org.opensearch.indices.replication.common.ReplicationType;
-import org.opensearch.core.rest.RestStatus;
+import org.opensearch.rest.RestStatus;
 
 import java.io.IOException;
 import java.time.Instant;
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.EnumSet;
@@ -82,7 +87,6 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.Objects;
 import java.util.Set;
 import java.util.function.Function;
 
@@ -286,41 +290,19 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
         SETTING_REPLICATION_TYPE,
         ReplicationType.DOCUMENT.toString(),
         ReplicationType::parseString,
-        new Setting.Validator<>() {
-
-            @Override
-            public void validate(final ReplicationType value) {}
-
-            @Override
-            public void validate(final ReplicationType value, final Map<Setting<?>, Object> settings) {
-                final Object remoteStoreEnabled = settings.get(INDEX_REMOTE_STORE_ENABLED_SETTING);
-                if (ReplicationType.SEGMENT.equals(value) == false && Objects.equals(remoteStoreEnabled, true)) {
-                    throw new IllegalArgumentException(
-                        "To enable "
-                            + INDEX_REMOTE_STORE_ENABLED_SETTING.getKey()
-                            + ", "
-                            + INDEX_REPLICATION_TYPE_SETTING.getKey()
-                            + " should be set to "
-                            + ReplicationType.SEGMENT
-                    );
-                }
-            }
-
-            @Override
-            public Iterator<Setting<?>> settings() {
-                final List<Setting<?>> settings = List.of(INDEX_REMOTE_STORE_ENABLED_SETTING);
-                return settings.iterator();
-            }
-        },
         Property.IndexScope,
         Property.Final
     );
 
     public static final String SETTING_REMOTE_STORE_ENABLED = "index.remote_store.enabled";
 
-    public static final String SETTING_REMOTE_SEGMENT_STORE_REPOSITORY = "index.remote_store.segment.repository";
+    public static final String SETTING_REMOTE_STORE_REPOSITORY = "index.remote_store.repository";
+
+    public static final String SETTING_REMOTE_TRANSLOG_STORE_ENABLED = "index.remote_store.translog.enabled";
 
     public static final String SETTING_REMOTE_TRANSLOG_STORE_REPOSITORY = "index.remote_store.translog.repository";
+
+    public static final String SETTING_REMOTE_TRANSLOG_BUFFER_INTERVAL = "index.remote_store.translog.buffer_interval";
 
     /**
      * Used to specify if the index data should be persisted in the remote store.
@@ -336,7 +318,7 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
             @Override
             public void validate(final Boolean value, final Map<Setting<?>, Object> settings) {
                 final Object replicationType = settings.get(INDEX_REPLICATION_TYPE_SETTING);
-                if (ReplicationType.SEGMENT.equals(replicationType) == false && value) {
+                if (replicationType != ReplicationType.SEGMENT && value == true) {
                     throw new IllegalArgumentException(
                         "To enable "
                             + INDEX_REMOTE_STORE_ENABLED_SETTING.getKey()
@@ -350,20 +332,19 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
 
             @Override
             public Iterator<Setting<?>> settings() {
-                final List<Setting<?>> settings = List.of(INDEX_REPLICATION_TYPE_SETTING);
+                final List<Setting<?>> settings = Collections.singletonList(INDEX_REPLICATION_TYPE_SETTING);
                 return settings.iterator();
             }
         },
         Property.IndexScope,
-        Property.PrivateIndex,
-        Property.Dynamic
+        Property.Final
     );
 
     /**
      * Used to specify remote store repository to use for this index.
      */
-    public static final Setting<String> INDEX_REMOTE_SEGMENT_STORE_REPOSITORY_SETTING = Setting.simpleString(
-        SETTING_REMOTE_SEGMENT_STORE_REPOSITORY,
+    public static final Setting<String> INDEX_REMOTE_STORE_REPOSITORY_SETTING = Setting.simpleString(
+        SETTING_REMOTE_STORE_REPOSITORY,
         new Setting.Validator<>() {
 
             @Override
@@ -373,12 +354,10 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
             public void validate(final String value, final Map<Setting<?>, Object> settings) {
                 if (value == null || value.isEmpty()) {
                     throw new IllegalArgumentException(
-                        "Setting "
-                            + INDEX_REMOTE_SEGMENT_STORE_REPOSITORY_SETTING.getKey()
-                            + " should be provided with non-empty repository ID"
+                        "Setting " + INDEX_REMOTE_STORE_REPOSITORY_SETTING.getKey() + " should be provided with non-empty repository ID"
                     );
                 } else {
-                    validateRemoteStoreSettingEnabled(settings, INDEX_REMOTE_SEGMENT_STORE_REPOSITORY_SETTING);
+                    validateRemoteStoreSettingEnabled(settings, INDEX_REMOTE_STORE_REPOSITORY_SETTING);
                 }
             }
 
@@ -389,8 +368,7 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
             }
         },
         Property.IndexScope,
-        Property.PrivateIndex,
-        Property.Dynamic
+        Property.Final
     );
 
     private static void validateRemoteStoreSettingEnabled(final Map<Setting<?>, Object> settings, Setting<?> setting) {
@@ -399,12 +377,40 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
             throw new IllegalArgumentException(
                 "Settings "
                     + setting.getKey()
-                    + " can only be set/enabled when "
+                    + " can ont be set/enabled when "
                     + INDEX_REMOTE_STORE_ENABLED_SETTING.getKey()
                     + " is set to true"
             );
         }
     }
+
+    /**
+     * Used to specify if the index translog operations should be persisted in the remote store.
+     */
+    public static final Setting<Boolean> INDEX_REMOTE_TRANSLOG_STORE_ENABLED_SETTING = Setting.boolSetting(
+        SETTING_REMOTE_TRANSLOG_STORE_ENABLED,
+        false,
+        new Setting.Validator<>() {
+
+            @Override
+            public void validate(final Boolean value) {}
+
+            @Override
+            public void validate(final Boolean value, final Map<Setting<?>, Object> settings) {
+                if (value == true) {
+                    validateRemoteStoreSettingEnabled(settings, INDEX_REMOTE_TRANSLOG_STORE_ENABLED_SETTING);
+                }
+            }
+
+            @Override
+            public Iterator<Setting<?>> settings() {
+                final List<Setting<?>> settings = Collections.singletonList(INDEX_REMOTE_STORE_ENABLED_SETTING);
+                return settings.iterator();
+            }
+        },
+        Property.IndexScope,
+        Property.Final
+    );
 
     public static final Setting<String> INDEX_REMOTE_TRANSLOG_REPOSITORY_SETTING = Setting.simpleString(
         SETTING_REMOTE_TRANSLOG_STORE_REPOSITORY,
@@ -420,13 +426,13 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
                         "Setting " + INDEX_REMOTE_TRANSLOG_REPOSITORY_SETTING.getKey() + " should be provided with non-empty repository ID"
                     );
                 } else {
-                    final Boolean isRemoteTranslogStoreEnabled = (Boolean) settings.get(INDEX_REMOTE_STORE_ENABLED_SETTING);
+                    final Boolean isRemoteTranslogStoreEnabled = (Boolean) settings.get(INDEX_REMOTE_TRANSLOG_STORE_ENABLED_SETTING);
                     if (isRemoteTranslogStoreEnabled == null || isRemoteTranslogStoreEnabled == false) {
                         throw new IllegalArgumentException(
                             "Settings "
                                 + INDEX_REMOTE_TRANSLOG_REPOSITORY_SETTING.getKey()
                                 + " can only be set/enabled when "
-                                + INDEX_REMOTE_STORE_ENABLED_SETTING.getKey()
+                                + INDEX_REMOTE_TRANSLOG_STORE_ENABLED_SETTING.getKey()
                                 + " is set to true"
                         );
                     }
@@ -435,13 +441,51 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
 
             @Override
             public Iterator<Setting<?>> settings() {
-                final List<Setting<?>> settings = Collections.singletonList(INDEX_REMOTE_STORE_ENABLED_SETTING);
+                final List<Setting<?>> settings = Collections.singletonList(INDEX_REMOTE_TRANSLOG_STORE_ENABLED_SETTING);
                 return settings.iterator();
             }
         },
         Property.IndexScope,
-        Property.PrivateIndex,
-        Property.Dynamic
+        Property.Final
+    );
+
+    public static final Setting<TimeValue> INDEX_REMOTE_TRANSLOG_BUFFER_INTERVAL_SETTING = Setting.timeSetting(
+        SETTING_REMOTE_TRANSLOG_BUFFER_INTERVAL,
+        TimeValue.timeValueMillis(100),
+        TimeValue.timeValueMillis(50),
+        new Setting.Validator<>() {
+
+            @Override
+            public void validate(final TimeValue value) {}
+
+            @Override
+            public void validate(final TimeValue value, final Map<Setting<?>, Object> settings) {
+                if (value == null) {
+                    throw new IllegalArgumentException(
+                        "Setting " + SETTING_REMOTE_TRANSLOG_BUFFER_INTERVAL + " should be provided with a valid time value"
+                    );
+                } else {
+                    final Boolean isRemoteTranslogStoreEnabled = (Boolean) settings.get(INDEX_REMOTE_TRANSLOG_STORE_ENABLED_SETTING);
+                    if (isRemoteTranslogStoreEnabled == null || isRemoteTranslogStoreEnabled == false) {
+                        throw new IllegalArgumentException(
+                            "Setting "
+                                + SETTING_REMOTE_TRANSLOG_BUFFER_INTERVAL
+                                + " can only be set when "
+                                + SETTING_REMOTE_TRANSLOG_STORE_ENABLED
+                                + " is set to true"
+                        );
+                    }
+                }
+            }
+
+            @Override
+            public Iterator<Setting<?>> settings() {
+                final List<Setting<?>> settings = Collections.singletonList(INDEX_REMOTE_TRANSLOG_STORE_ENABLED_SETTING);
+                return settings.iterator();
+            }
+        },
+        Property.IndexScope,
+        Property.Final
     );
 
     public static final String SETTING_AUTO_EXPAND_REPLICAS = "index.auto_expand_replicas";
@@ -562,7 +606,7 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
         Function.identity(),
         Property.IndexScope
     );
-    public static final String INDEX_UUID_NA_VALUE = Strings.UNKNOWN_UUID_VALUE;
+    public static final String INDEX_UUID_NA_VALUE = "_na_";
 
     public static final String INDEX_ROUTING_REQUIRE_GROUP_PREFIX = "index.routing.allocation.require";
     public static final String INDEX_ROUTING_INCLUDE_GROUP_PREFIX = "index.routing.allocation.include";
@@ -654,15 +698,15 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
 
     private final State state;
 
-    private final Map<String, AliasMetadata> aliases;
+    private final ImmutableOpenMap<String, AliasMetadata> aliases;
 
     private final Settings settings;
 
-    private final Map<String, MappingMetadata> mappings;
+    private final ImmutableOpenMap<String, MappingMetadata> mappings;
 
-    private final Map<String, DiffableStringMap> customData;
+    private final ImmutableOpenMap<String, DiffableStringMap> customData;
 
-    private final Map<Integer, Set<String>> inSyncAllocationIds;
+    private final ImmutableOpenIntMap<Set<String>> inSyncAllocationIds;
 
     private final transient int totalNumberOfShards;
 
@@ -675,7 +719,7 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
     private final Version indexUpgradedVersion;
 
     private final ActiveShardCount waitForActiveShards;
-    private final Map<String, RolloverInfo> rolloverInfos;
+    private final ImmutableOpenMap<String, RolloverInfo> rolloverInfos;
     private final boolean isSystem;
 
     private IndexMetadata(
@@ -689,10 +733,10 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
         final int numberOfShards,
         final int numberOfReplicas,
         final Settings settings,
-        final Map<String, MappingMetadata> mappings,
-        final Map<String, AliasMetadata> aliases,
-        final Map<String, DiffableStringMap> customData,
-        final Map<Integer, Set<String>> inSyncAllocationIds,
+        final ImmutableOpenMap<String, MappingMetadata> mappings,
+        final ImmutableOpenMap<String, AliasMetadata> aliases,
+        final ImmutableOpenMap<String, DiffableStringMap> customData,
+        final ImmutableOpenIntMap<Set<String>> inSyncAllocationIds,
         final DiscoveryNodeFilters requireFilters,
         final DiscoveryNodeFilters initialRecoveryFilters,
         final DiscoveryNodeFilters includeFilters,
@@ -702,7 +746,7 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
         final int routingNumShards,
         final int routingPartitionSize,
         final ActiveShardCount waitForActiveShards,
-        final Map<String, RolloverInfo> rolloverInfos,
+        final ImmutableOpenMap<String, RolloverInfo> rolloverInfos,
         final boolean isSystem
     ) {
 
@@ -721,10 +765,10 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
         this.numberOfReplicas = numberOfReplicas;
         this.totalNumberOfShards = numberOfShards * (numberOfReplicas + 1);
         this.settings = settings;
-        this.mappings = Collections.unmodifiableMap(mappings);
-        this.customData = Collections.unmodifiableMap(customData);
-        this.aliases = Collections.unmodifiableMap(aliases);
-        this.inSyncAllocationIds = Collections.unmodifiableMap(inSyncAllocationIds);
+        this.mappings = mappings;
+        this.customData = customData;
+        this.aliases = aliases;
+        this.inSyncAllocationIds = inSyncAllocationIds;
         this.requireFilters = requireFilters;
         this.includeFilters = includeFilters;
         this.excludeFilters = excludeFilters;
@@ -735,7 +779,7 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
         this.routingFactor = routingNumShards / numberOfShards;
         this.routingPartitionSize = routingPartitionSize;
         this.waitForActiveShards = waitForActiveShards;
-        this.rolloverInfos = Collections.unmodifiableMap(rolloverInfos);
+        this.rolloverInfos = rolloverInfos;
         this.isSystem = isSystem;
         assert numberOfShards * routingFactor == routingNumShards : routingNumShards + " must be a multiple of " + numberOfShards;
     }
@@ -843,7 +887,7 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
         return settings;
     }
 
-    public Map<String, AliasMetadata> getAliases() {
+    public ImmutableOpenMap<String, AliasMetadata> getAliases() {
         return this.aliases;
     }
 
@@ -852,8 +896,8 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
      */
     @Nullable
     public MappingMetadata mapping() {
-        for (final MappingMetadata cursor : mappings.values()) {
-            return cursor;
+        for (ObjectObjectCursor<String, MappingMetadata> cursor : mappings) {
+            return cursor.value;
         }
         return null;
     }
@@ -869,7 +913,7 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
             : null;
     }
 
-    Map<String, DiffableStringMap> getCustomData() {
+    ImmutableOpenMap<String, DiffableStringMap> getCustomData() {
         return this.customData;
     }
 
@@ -877,11 +921,11 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
         return this.customData.get(key);
     }
 
-    public Map<Integer, Set<String>> getInSyncAllocationIds() {
+    public ImmutableOpenIntMap<Set<String>> getInSyncAllocationIds() {
         return inSyncAllocationIds;
     }
 
-    public Map<String, RolloverInfo> getRolloverInfos() {
+    public ImmutableOpenMap<String, RolloverInfo> getRolloverInfos() {
         return rolloverInfos;
     }
 
@@ -1017,11 +1061,11 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
         private final long[] primaryTerms;
         private final State state;
         private final Settings settings;
-        private final Diff<Map<String, MappingMetadata>> mappings;
-        private final Diff<Map<String, AliasMetadata>> aliases;
-        private final Diff<Map<String, DiffableStringMap>> customData;
-        private final Diff<Map<Integer, Set<String>>> inSyncAllocationIds;
-        private final Diff<Map<String, RolloverInfo>> rolloverInfos;
+        private final Diff<ImmutableOpenMap<String, MappingMetadata>> mappings;
+        private final Diff<ImmutableOpenMap<String, AliasMetadata>> aliases;
+        private final Diff<ImmutableOpenMap<String, DiffableStringMap>> customData;
+        private final Diff<ImmutableOpenIntMap<Set<String>>> inSyncAllocationIds;
+        private final Diff<ImmutableOpenMap<String, RolloverInfo>> rolloverInfos;
         private final boolean isSystem;
 
         IndexMetadataDiff(IndexMetadata before, IndexMetadata after) {
@@ -1066,15 +1110,19 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
             state = State.fromId(in.readByte());
             settings = Settings.readSettingsFromStream(in);
             primaryTerms = in.readVLongArray();
-            mappings = DiffableUtils.readJdkMapDiff(in, DiffableUtils.getStringKeySerializer(), MAPPING_DIFF_VALUE_READER);
-            aliases = DiffableUtils.readJdkMapDiff(in, DiffableUtils.getStringKeySerializer(), ALIAS_METADATA_DIFF_VALUE_READER);
-            customData = DiffableUtils.readJdkMapDiff(in, DiffableUtils.getStringKeySerializer(), CUSTOM_DIFF_VALUE_READER);
-            inSyncAllocationIds = DiffableUtils.readJdkMapDiff(
+            mappings = DiffableUtils.readImmutableOpenMapDiff(in, DiffableUtils.getStringKeySerializer(), MAPPING_DIFF_VALUE_READER);
+            aliases = DiffableUtils.readImmutableOpenMapDiff(in, DiffableUtils.getStringKeySerializer(), ALIAS_METADATA_DIFF_VALUE_READER);
+            customData = DiffableUtils.readImmutableOpenMapDiff(in, DiffableUtils.getStringKeySerializer(), CUSTOM_DIFF_VALUE_READER);
+            inSyncAllocationIds = DiffableUtils.readImmutableOpenIntMapDiff(
                 in,
                 DiffableUtils.getVIntKeySerializer(),
                 DiffableUtils.StringSetValueSerializer.getInstance()
             );
-            rolloverInfos = DiffableUtils.readJdkMapDiff(in, DiffableUtils.getStringKeySerializer(), ROLLOVER_INFO_DIFF_VALUE_READER);
+            rolloverInfos = DiffableUtils.readImmutableOpenMapDiff(
+                in,
+                DiffableUtils.getStringKeySerializer(),
+                ROLLOVER_INFO_DIFF_VALUE_READER
+            );
             isSystem = in.readBoolean();
         }
 
@@ -1170,26 +1218,26 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
         writeSettingsToStream(settings, out);
         out.writeVLongArray(primaryTerms);
         out.writeVInt(mappings.size());
-        for (final MappingMetadata cursor : mappings.values()) {
-            cursor.writeTo(out);
+        for (ObjectCursor<MappingMetadata> cursor : mappings.values()) {
+            cursor.value.writeTo(out);
         }
         out.writeVInt(aliases.size());
-        for (final AliasMetadata cursor : aliases.values()) {
-            cursor.writeTo(out);
+        for (ObjectCursor<AliasMetadata> cursor : aliases.values()) {
+            cursor.value.writeTo(out);
         }
         out.writeVInt(customData.size());
-        for (final Map.Entry<String, DiffableStringMap> cursor : customData.entrySet()) {
-            out.writeString(cursor.getKey());
-            cursor.getValue().writeTo(out);
+        for (final ObjectObjectCursor<String, DiffableStringMap> cursor : customData) {
+            out.writeString(cursor.key);
+            cursor.value.writeTo(out);
         }
         out.writeVInt(inSyncAllocationIds.size());
-        for (final Map.Entry<Integer, Set<String>> cursor : inSyncAllocationIds.entrySet()) {
-            out.writeVInt(cursor.getKey());
-            DiffableUtils.StringSetValueSerializer.getInstance().write(cursor.getValue(), out);
+        for (IntObjectCursor<Set<String>> cursor : inSyncAllocationIds) {
+            out.writeVInt(cursor.key);
+            DiffableUtils.StringSetValueSerializer.getInstance().write(cursor.value, out);
         }
         out.writeVInt(rolloverInfos.size());
-        for (final RolloverInfo cursor : rolloverInfos.values()) {
-            cursor.writeTo(out);
+        for (ObjectCursor<RolloverInfo> cursor : rolloverInfos.values()) {
+            cursor.value.writeTo(out);
         }
         out.writeBoolean(isSystem);
     }
@@ -1221,21 +1269,21 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
         private long aliasesVersion = 1;
         private long[] primaryTerms = null;
         private Settings settings = Settings.Builder.EMPTY_SETTINGS;
-        private final Map<String, MappingMetadata> mappings;
-        private final Map<String, AliasMetadata> aliases;
-        private final Map<String, DiffableStringMap> customMetadata;
-        private final Map<Integer, Set<String>> inSyncAllocationIds;
-        private final Map<String, RolloverInfo> rolloverInfos;
+        private final ImmutableOpenMap.Builder<String, MappingMetadata> mappings;
+        private final ImmutableOpenMap.Builder<String, AliasMetadata> aliases;
+        private final ImmutableOpenMap.Builder<String, DiffableStringMap> customMetadata;
+        private final ImmutableOpenIntMap.Builder<Set<String>> inSyncAllocationIds;
+        private final ImmutableOpenMap.Builder<String, RolloverInfo> rolloverInfos;
         private Integer routingNumShards;
         private boolean isSystem;
 
         public Builder(String index) {
             this.index = index;
-            this.mappings = new HashMap<>();
-            this.aliases = new HashMap<>();
-            this.customMetadata = new HashMap<>();
-            this.inSyncAllocationIds = new HashMap<>();
-            this.rolloverInfos = new HashMap<>();
+            this.mappings = ImmutableOpenMap.builder();
+            this.aliases = ImmutableOpenMap.builder();
+            this.customMetadata = ImmutableOpenMap.builder();
+            this.inSyncAllocationIds = ImmutableOpenIntMap.builder();
+            this.rolloverInfos = ImmutableOpenMap.builder();
             this.isSystem = false;
         }
 
@@ -1248,12 +1296,12 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
             this.aliasesVersion = indexMetadata.aliasesVersion;
             this.settings = indexMetadata.getSettings();
             this.primaryTerms = indexMetadata.primaryTerms.clone();
-            this.mappings = new HashMap<>(indexMetadata.mappings);
-            this.aliases = new HashMap<>(indexMetadata.aliases);
-            this.customMetadata = new HashMap<>(indexMetadata.customData);
+            this.mappings = ImmutableOpenMap.builder(indexMetadata.mappings);
+            this.aliases = ImmutableOpenMap.builder(indexMetadata.aliases);
+            this.customMetadata = ImmutableOpenMap.builder(indexMetadata.customData);
             this.routingNumShards = indexMetadata.routingNumShards;
-            this.inSyncAllocationIds = new HashMap<>(indexMetadata.inSyncAllocationIds);
-            this.rolloverInfos = new HashMap<>(indexMetadata.rolloverInfos);
+            this.inSyncAllocationIds = ImmutableOpenIntMap.builder(indexMetadata.inSyncAllocationIds);
+            this.rolloverInfos = ImmutableOpenMap.builder(indexMetadata.rolloverInfos);
             this.isSystem = indexMetadata.isSystem;
         }
 
@@ -1328,7 +1376,7 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
             putMapping(
                 new MappingMetadata(
                     MapperService.SINGLE_MAPPING_NAME,
-                    XContentHelper.convertToMap(MediaTypeRegistry.xContent(source).xContent(), source, true)
+                    XContentHelper.convertToMap(XContentFactory.xContent(source), source, true)
                 )
             );
             return this;
@@ -1472,7 +1520,7 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
         }
 
         public IndexMetadata build() {
-            final Map<String, AliasMetadata> tmpAliases = aliases;
+            ImmutableOpenMap.Builder<String, AliasMetadata> tmpAliases = aliases;
             Settings tmpSettings = settings;
 
             /*
@@ -1504,7 +1552,7 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
             }
 
             // fill missing slots in inSyncAllocationIds with empty set if needed and make all entries immutable
-            final Map<Integer, Set<String>> filledInSyncAllocationIds = new HashMap<>();
+            ImmutableOpenIntMap.Builder<Set<String>> filledInSyncAllocationIds = ImmutableOpenIntMap.builder();
             for (int i = 0; i < numberOfShards; i++) {
                 if (inSyncAllocationIds.containsKey(i)) {
                     filledInSyncAllocationIds.put(i, Collections.unmodifiableSet(new HashSet<>(inSyncAllocationIds.get(i))));
@@ -1540,7 +1588,7 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
             } else {
                 initialRecoveryFilters = DiscoveryNodeFilters.buildOrUpdateFromKeyValue(null, OR, initialRecoveryMap);
             }
-            Version indexCreatedVersion = indexCreated(settings);
+            Version indexCreatedVersion = Version.indexCreated(settings);
             Version indexUpgradedVersion = settings.getAsVersion(IndexMetadata.SETTING_VERSION_UPGRADED, indexCreatedVersion);
 
             if (primaryTerms == null) {
@@ -1582,10 +1630,10 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
                 numberOfShards,
                 numberOfReplicas,
                 tmpSettings,
-                mappings,
-                tmpAliases,
-                customMetadata,
-                filledInSyncAllocationIds,
+                mappings.build(),
+                tmpAliases.build(),
+                customMetadata.build(),
+                filledInSyncAllocationIds.build(),
                 requireFilters,
                 initialRecoveryFilters,
                 includeFilters,
@@ -1595,7 +1643,7 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
                 getRoutingNumShards(),
                 routingPartitionSize,
                 waitForActiveShards,
-                rolloverInfos,
+                rolloverInfos.build(),
                 isSystem
             );
         }
@@ -1651,15 +1699,15 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
                 builder.endObject();
             }
 
-            for (final Map.Entry<String, DiffableStringMap> cursor : indexMetadata.customData.entrySet()) {
-                builder.field(cursor.getKey());
-                builder.map(cursor.getValue());
+            for (ObjectObjectCursor<String, DiffableStringMap> cursor : indexMetadata.customData) {
+                builder.field(cursor.key);
+                builder.map(cursor.value);
             }
 
             if (context != Metadata.XContentContext.API) {
                 builder.startObject(KEY_ALIASES);
-                for (final AliasMetadata cursor : indexMetadata.getAliases().values()) {
-                    AliasMetadata.Builder.toXContent(cursor, builder, params);
+                for (ObjectCursor<AliasMetadata> cursor : indexMetadata.getAliases().values()) {
+                    AliasMetadata.Builder.toXContent(cursor.value, builder, params);
                 }
                 builder.endObject();
 
@@ -1670,8 +1718,8 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
                 builder.endArray();
             } else {
                 builder.startArray(KEY_ALIASES);
-                for (final String cursor : indexMetadata.getAliases().keySet()) {
-                    builder.value(cursor);
+                for (ObjectCursor<String> cursor : indexMetadata.getAliases().keys()) {
+                    builder.value(cursor.value);
                 }
                 builder.endArray();
 
@@ -1683,9 +1731,9 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
             }
 
             builder.startObject(KEY_IN_SYNC_ALLOCATIONS);
-            for (final Map.Entry<Integer, Set<String>> cursor : indexMetadata.inSyncAllocationIds.entrySet()) {
-                builder.startArray(String.valueOf(cursor.getKey()));
-                for (String allocationId : cursor.getValue()) {
+            for (IntObjectCursor<Set<String>> cursor : indexMetadata.inSyncAllocationIds) {
+                builder.startArray(String.valueOf(cursor.key));
+                for (String allocationId : cursor.value) {
                     builder.value(allocationId);
                 }
                 builder.endArray();
@@ -1693,8 +1741,8 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
             builder.endObject();
 
             builder.startObject(KEY_ROLLOVER_INFOS);
-            for (final RolloverInfo cursor : indexMetadata.getRolloverInfos().values()) {
-                cursor.toXContent(builder, params);
+            for (ObjectCursor<RolloverInfo> cursor : indexMetadata.getRolloverInfos().values()) {
+                cursor.value.toXContent(builder, params);
             }
             builder.endObject();
             builder.field(KEY_SYSTEM, indexMetadata.isSystem);
@@ -1798,7 +1846,7 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
                             }
                         }
                     } else if (KEY_PRIMARY_TERMS.equals(currentFieldName)) {
-                        final List<Long> list = new ArrayList<>();
+                        LongArrayList list = new LongArrayList();
                         while ((token = parser.nextToken()) != XContentParser.Token.END_ARRAY) {
                             if (token == XContentParser.Token.VALUE_NUMBER) {
                                 list.add(parser.longValue());
@@ -1806,7 +1854,7 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
                                 throw new IllegalStateException("found a non-numeric value under [" + KEY_PRIMARY_TERMS + "]");
                             }
                         }
-                        builder.primaryTerms(list.stream().mapToLong(i -> i).toArray());
+                        builder.primaryTerms(list.toArray());
                     } else {
                         throw new IllegalArgumentException("Unexpected field for an array " + currentFieldName);
                     }
@@ -1836,7 +1884,7 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
                 }
             }
 
-            final Version indexCreatedVersion = indexCreated(builder.settings);
+            final Version indexCreatedVersion = Version.indexCreated(builder.settings);
             // Reference:
             // https://github.com/opensearch-project/OpenSearch/blob/4dde0f2a3b445b2fc61dab29c5a2178967f4a3e3/server/src/main/java/org/opensearch/cluster/metadata/IndexMetadata.java#L1620-L1628
             if (Assertions.ENABLED && indexCreatedVersion.onOrAfter(LegacyESVersion.V_6_5_0)) {
@@ -1883,28 +1931,9 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
     }
 
     /**
-     * Return the version the index was created from the provided index settings
-     *
-     * This looks for the presence of the {@link Version} object with key {@link IndexMetadata#SETTING_VERSION_CREATED}
-     */
-    public static Version indexCreated(final Settings indexSettings) {
-        final Version indexVersion = SETTING_INDEX_VERSION_CREATED.get(indexSettings);
-        if (indexVersion.equals(Version.V_EMPTY)) {
-            final String message = String.format(
-                Locale.ROOT,
-                "[%s] is not present in the index settings for index with UUID [%s]",
-                SETTING_INDEX_VERSION_CREATED.getKey(),
-                indexSettings.get(IndexMetadata.SETTING_INDEX_UUID)
-            );
-            throw new IllegalStateException(message);
-        }
-        return indexVersion;
-    }
-
-    /**
      * State format for {@link IndexMetadata} to write to and load from disk
      */
-    public static final MetadataStateFormat<IndexMetadata> FORMAT = new MetadataStateFormat<>(INDEX_STATE_FILE_PREFIX) {
+    public static final MetadataStateFormat<IndexMetadata> FORMAT = new MetadataStateFormat<IndexMetadata>(INDEX_STATE_FILE_PREFIX) {
 
         @Override
         public void toXContent(XContentBuilder builder, IndexMetadata state) throws IOException {
@@ -1968,8 +1997,8 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
             throw new IllegalArgumentException(
                 "the number of target shards ("
                     + numTargetShards
-                    + ") must be the same as the number of"
-                    + " source shards ("
+                    + ") must be the same as the number of "
+                    + " source shards ( "
                     + numSourceShards
                     + ")"
             );
