@@ -15,7 +15,6 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.mock;
@@ -23,11 +22,16 @@ import static org.opensearch.test.ClusterServiceUtils.createClusterService;
 
 import java.io.IOException;
 import java.net.InetAddress;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.security.AccessControlException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
-import java.util.Set;
+import java.util.Optional;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
@@ -35,19 +39,20 @@ import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.LogManager;
 import org.junit.After;
 import org.junit.Before;
-import org.opensearch.OpenSearchException;
 import org.opensearch.Version;
-import org.opensearch.action.ActionModule;
-import org.opensearch.action.ActionModule.DynamicActionRegistry;
 import org.opensearch.action.admin.cluster.state.ClusterStateResponse;
 import org.opensearch.client.node.NodeClient;
 import org.opensearch.cluster.ClusterSettingsResponse;
-import org.opensearch.common.util.FeatureFlags;
 import org.opensearch.env.EnvironmentSettingsResponse;
 import org.opensearch.cluster.metadata.IndexMetadata;
+import org.opensearch.cluster.metadata.IndexNameExpressionResolver;
 import org.opensearch.cluster.node.DiscoveryNode;
 import org.opensearch.cluster.service.ClusterService;
+import org.opensearch.common.bytes.BytesReference;
+import org.opensearch.common.io.PathUtils;
+import org.opensearch.common.io.stream.BytesStreamInput;
 import org.opensearch.common.io.stream.BytesStreamOutput;
+import org.opensearch.common.io.stream.NamedWriteableRegistry;
 import org.opensearch.common.network.NetworkService;
 import org.opensearch.common.settings.Setting;
 import org.opensearch.common.settings.Settings;
@@ -55,55 +60,77 @@ import org.opensearch.common.settings.WriteableSetting;
 import org.opensearch.common.settings.Setting.Property;
 import org.opensearch.common.settings.WriteableSetting.SettingType;
 import org.opensearch.common.settings.SettingsModule;
-import org.opensearch.core.common.transport.TransportAddress;
+import org.opensearch.common.transport.TransportAddress;
+import org.opensearch.common.util.FeatureFlags;
 import org.opensearch.common.util.PageCacheRecycler;
-import org.opensearch.core.common.bytes.BytesReference;
-import org.opensearch.core.common.io.stream.BytesStreamInput;
-import org.opensearch.core.common.io.stream.NamedWriteableRegistry;
+import org.opensearch.common.util.concurrent.ThreadContext;
 import org.opensearch.env.Environment;
-import org.opensearch.extensions.proto.ExtensionRequestProto;
+import org.opensearch.env.TestEnvironment;
 import org.opensearch.extensions.rest.RegisterRestActionsRequest;
 import org.opensearch.extensions.settings.RegisterCustomSettingsRequest;
-import org.opensearch.extensions.ExtensionsSettings.Extension;
-import org.opensearch.identity.IdentityService;
-import org.opensearch.core.indices.breaker.NoneCircuitBreakerService;
-import org.opensearch.plugins.ExtensionAwarePlugin;
+import org.opensearch.index.IndexModule;
+import org.opensearch.index.IndexSettings;
+import org.opensearch.index.analysis.AnalysisRegistry;
+import org.opensearch.index.engine.EngineConfigFactory;
+import org.opensearch.index.engine.InternalEngineFactory;
+import org.opensearch.indices.breaker.NoneCircuitBreakerService;
 import org.opensearch.rest.RestController;
 import org.opensearch.test.FeatureFlagSetter;
+import org.opensearch.test.IndexSettingsModule;
 import org.opensearch.test.MockLogAppender;
 import org.opensearch.test.OpenSearchTestCase;
 import org.opensearch.test.client.NoOpNodeClient;
 import org.opensearch.test.transport.MockTransportService;
 import org.opensearch.threadpool.TestThreadPool;
 import org.opensearch.threadpool.ThreadPool;
+import org.opensearch.transport.NodeNotConnectedException;
 import org.opensearch.transport.Transport;
-import org.opensearch.core.transport.TransportResponse;
+import org.opensearch.transport.TransportResponse;
 import org.opensearch.transport.TransportService;
 import org.opensearch.transport.nio.MockNioTransport;
 import org.opensearch.usage.UsageService;
 
 public class ExtensionsManagerTests extends OpenSearchTestCase {
+
+    private FeatureFlagSetter featureFlagSetter;
     private TransportService transportService;
-    private ActionModule actionModule;
-    private DynamicActionRegistry dynamicActionRegistry;
     private RestController restController;
     private SettingsModule settingsModule;
     private ClusterService clusterService;
-    private ExtensionAwarePlugin extAwarePlugin;
-    private Setting customSetting = Setting.simpleString("custom_extension_setting", "none", Property.ExtensionScope);
     private NodeClient client;
     private MockNioTransport transport;
+    private Path extensionDir;
     private final ThreadPool threadPool = new TestThreadPool(ExtensionsManagerTests.class.getSimpleName());
     private final Settings settings = Settings.builder()
         .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
         .put(Environment.PATH_HOME_SETTING.getKey(), createTempDir().toString())
         .build();
+    private final List<String> extensionsYmlLines = Arrays.asList(
+        "extensions:",
+        "   - name: firstExtension",
+        "     uniqueId: uniqueid1",
+        "     hostAddress: '127.0.0.0'",
+        "     port: '9300'",
+        "     version: '0.0.7'",
+        "     opensearchVersion: '3.0.0'",
+        "     minimumCompatibleVersion: '3.0.0'",
+        "   - name: secondExtension",
+        "     uniqueId: 'uniqueid2'",
+        "     hostAddress: '127.0.0.1'",
+        "     port: '9301'",
+        "     version: '3.14.16'",
+        "     opensearchVersion: '2.0.0'",
+        "     minimumCompatibleVersion: '2.0.0'",
+        "     dependencies:",
+        "       - uniqueId: 'uniqueid0'",
+        "         version: '2.0.0'"
+    );
 
     private DiscoveryExtensionNode extensionNode;
 
     @Before
     public void setup() throws Exception {
-        FeatureFlagSetter.set(FeatureFlags.EXTENSIONS);
+        featureFlagSetter = FeatureFlagSetter.set(FeatureFlags.EXTENSIONS);
         Settings settings = Settings.builder().put("cluster.name", "test").build();
         transport = new MockNioTransport(
             settings,
@@ -130,29 +157,17 @@ public class ExtensionsManagerTests extends OpenSearchTestCase {
             null,
             Collections.emptySet()
         );
-        actionModule = mock(ActionModule.class);
-        extAwarePlugin = new ExtensionAwarePlugin() {
-
-            @Override
-            public List<Setting<?>> getExtensionSettings() {
-                List<Setting<?>> settings = new ArrayList<Setting<?>>();
-                settings.add(customSetting);
-                return settings;
-            }
-        };
-        dynamicActionRegistry = mock(DynamicActionRegistry.class);
         restController = new RestController(
             emptySet(),
             null,
             new NodeClient(Settings.EMPTY, threadPool),
             new NoneCircuitBreakerService(),
-            new UsageService(),
-            new IdentityService(Settings.EMPTY, List.of())
+            new UsageService()
         );
-        when(actionModule.getDynamicActionRegistry()).thenReturn(mock(DynamicActionRegistry.class));
-        when(actionModule.getRestController()).thenReturn(restController);
         settingsModule = new SettingsModule(Settings.EMPTY, emptyList(), emptyList(), emptySet());
         clusterService = createClusterService(threadPool);
+
+        extensionDir = createTempDir();
 
         extensionNode = new DiscoveryExtensionNode(
             "firstExtension",
@@ -173,39 +188,13 @@ public class ExtensionsManagerTests extends OpenSearchTestCase {
         transportService.close();
         client.close();
         ThreadPool.terminate(threadPool, 30, TimeUnit.SECONDS);
+        featureFlagSetter.close();
     }
 
-    public void testLoadExtensions() throws Exception {
+    public void testDiscover() throws Exception {
+        Files.write(extensionDir.resolve("extensions.yml"), extensionsYmlLines, StandardCharsets.UTF_8);
 
-        Set<Setting<?>> additionalSettings = extAwarePlugin.getExtensionSettings().stream().collect(Collectors.toSet());
-        ExtensionScopedSettings extensionScopedSettings = new ExtensionScopedSettings(additionalSettings);
-        ExtensionsManager extensionsManager = new ExtensionsManager(additionalSettings);
-        ExtensionDependency dependentExtension = new ExtensionDependency("uniqueid0", Version.fromString("2.0.0"));
-
-        Extension firstExtension = new Extension(
-            "firstExtension",
-            "uniqueid1",
-            "127.0.0.1",
-            "9300",
-            "0.0.7",
-            "3.0.0",
-            "3.0.0",
-            Collections.emptyList(),
-            extensionScopedSettings
-        );
-        Extension secondExtension = new Extension(
-            "secondExtension",
-            "uniqueid2",
-            "127.0.0.1",
-            "9301",
-            "0.0.7",
-            "2.0.0",
-            "2.0.0",
-            List.of(dependentExtension),
-            extensionScopedSettings
-        );
-        extensionsManager.loadExtension(firstExtension);
-        extensionsManager.loadExtension(secondExtension);
+        ExtensionsManager extensionsManager = new ExtensionsManager(settings, extensionDir);
 
         List<DiscoveryExtensionNode> expectedExtensions = new ArrayList<DiscoveryExtensionNode>();
 
@@ -217,7 +206,7 @@ public class ExtensionsManagerTests extends OpenSearchTestCase {
             new DiscoveryExtensionNode(
                 "firstExtension",
                 "uniqueid1",
-                new TransportAddress(InetAddress.getByName("127.0.0.1"), 9300),
+                new TransportAddress(InetAddress.getByName("127.0.0.0"), 9300),
                 new HashMap<String, String>(),
                 Version.fromString("3.0.0"),
                 Version.fromString("3.0.0"),
@@ -247,41 +236,17 @@ public class ExtensionsManagerTests extends OpenSearchTestCase {
             assertEquals(extension.getVersion(), initializedExtension.getVersion());
             assertEquals(extension.getMinimumCompatibleVersion(), initializedExtension.getMinimumCompatibleVersion());
             assertEquals(extension.getDependencies(), initializedExtension.getDependencies());
-            assertTrue(extensionsManager.lookupExtensionSettingsById(extension.getId()).isPresent());
         }
     }
 
-    public void testNonUniqueLoadedExtensions() throws Exception {
+    public void testNonUniqueExtensionsDiscovery() throws Exception {
+        Path emptyExtensionDir = createTempDir();
+        List<String> nonUniqueYmlLines = extensionsYmlLines.stream()
+            .map(s -> s.replace("uniqueid2", "uniqueid1"))
+            .collect(Collectors.toList());
+        Files.write(emptyExtensionDir.resolve("extensions.yml"), nonUniqueYmlLines, StandardCharsets.UTF_8);
 
-        Extension firstExtension = new Extension(
-            "firstExtension",
-            "uniqueid1",
-            "127.0.0.0",
-            "9300",
-            "0.0.7",
-            "3.0.0",
-            "3.0.0",
-            Collections.emptyList(),
-            null
-        );
-        Extension secondExtension = new Extension(
-            "secondExtension",
-            "uniqueid1",
-            "127.0.0.0",
-            "9300",
-            "0.0.7",
-            "3.0.0",
-            "3.0.0",
-            null,
-            null
-        );
-        ExtensionsManager extensionsManager = new ExtensionsManager(Set.of());
-        extensionsManager.loadExtension(firstExtension);
-        IOException exception = expectThrows(IOException.class, () -> extensionsManager.loadExtension(secondExtension));
-        assertEquals(
-            "Duplicate uniqueId [uniqueid1]. Did not load extension: Extension [name=secondExtension, uniqueId=uniqueid1, hostAddress=127.0.0.0, port=9300, version=0.0.7, opensearchVersion=3.0.0, minimumCompatibleVersion=3.0.0]",
-            exception.getMessage()
-        );
+        ExtensionsManager extensionsManager = new ExtensionsManager(settings, emptyExtensionDir);
 
         List<DiscoveryExtensionNode> expectedExtensions = new ArrayList<DiscoveryExtensionNode>();
 
@@ -309,17 +274,6 @@ public class ExtensionsManagerTests extends OpenSearchTestCase {
         }
         assertTrue(expectedExtensions.containsAll(emptyList()));
         assertTrue(expectedExtensions.containsAll(emptyList()));
-    }
-
-    public void testMissingRequiredFieldsWhileLoadingExtension() throws Exception {
-
-        Extension firstExtension = new Extension("firstExtension", "uniqueid1", "127.0.0.0", "9300", "0.0.7", "3.0.0", "", null, null);
-        ExtensionsManager extensionsManager = new ExtensionsManager(Set.of());
-
-        IOException exception = expectThrows(IOException.class, () -> extensionsManager.loadExtension(firstExtension));
-        assertEquals("Required field [minimum opensearch version] is missing in the request", exception.getMessage());
-
-        assertEquals(0, extensionsManager.getExtensionIdMap().values().size());
     }
 
     public void testDiscoveryExtension() throws Exception {
@@ -370,8 +324,49 @@ public class ExtensionsManagerTests extends OpenSearchTestCase {
         }
     }
 
+    public void testNonAccessibleDirectory() throws Exception {
+        AccessControlException e = expectThrows(
+
+            AccessControlException.class,
+            () -> new ExtensionsManager(settings, PathUtils.get(""))
+        );
+        assertEquals("access denied (\"java.io.FilePermission\" \"\" \"read\")", e.getMessage());
+    }
+
+    public void testNoExtensionsFile() throws Exception {
+        Settings settings = Settings.builder().build();
+
+        try (MockLogAppender mockLogAppender = MockLogAppender.createForLoggers(LogManager.getLogger(ExtensionsManager.class))) {
+
+            mockLogAppender.addExpectation(
+                new MockLogAppender.SeenEventExpectation(
+                    "No Extensions File Present",
+                    "org.opensearch.extensions.ExtensionsManager",
+                    Level.WARN,
+                    "Extensions.yml file is not present.  No extensions will be loaded."
+                )
+            );
+
+            new ExtensionsManager(settings, extensionDir);
+
+            mockLogAppender.assertAllExpectationsMatched();
+        }
+    }
+
+    public void testEmptyExtensionsFile() throws Exception {
+        Path emptyExtensionDir = createTempDir();
+
+        List<String> emptyExtensionsYmlLines = Arrays.asList();
+        Files.write(emptyExtensionDir.resolve("extensions.yml"), emptyExtensionsYmlLines, StandardCharsets.UTF_8);
+
+        Settings settings = Settings.builder().build();
+
+        expectThrows(IOException.class, () -> new ExtensionsManager(settings, emptyExtensionDir));
+    }
+
     public void testInitialize() throws Exception {
-        ExtensionsManager extensionsManager = new ExtensionsManager(Set.of());
+        Files.write(extensionDir.resolve("extensions.yml"), extensionsYmlLines, StandardCharsets.UTF_8);
+        ExtensionsManager extensionsManager = new ExtensionsManager(settings, extensionDir);
 
         initialize(extensionsManager);
 
@@ -412,22 +407,23 @@ public class ExtensionsManagerTests extends OpenSearchTestCase {
     }
 
     public void testHandleRegisterRestActionsRequest() throws Exception {
+        Files.write(extensionDir.resolve("extensions.yml"), extensionsYmlLines, StandardCharsets.UTF_8);
 
-        ExtensionsManager extensionsManager = new ExtensionsManager(Set.of());
+        ExtensionsManager extensionsManager = new ExtensionsManager(settings, extensionDir);
         initialize(extensionsManager);
 
         String uniqueIdStr = "uniqueid1";
-        List<String> actionsList = List.of("GET /foo foo", "PUT /bar bar", "POST /baz baz");
-        List<String> deprecatedActionsList = List.of("GET /deprecated/foo foo_deprecated", "It's deprecated!");
-        RegisterRestActionsRequest registerActionsRequest = new RegisterRestActionsRequest(uniqueIdStr, actionsList, deprecatedActionsList);
+        List<String> actionsList = List.of("GET /foo", "PUT /bar", "POST /baz");
+        RegisterRestActionsRequest registerActionsRequest = new RegisterRestActionsRequest(uniqueIdStr, actionsList);
         TransportResponse response = extensionsManager.getRestActionsRequestHandler()
-            .handleRegisterRestActionsRequest(registerActionsRequest, actionModule.getDynamicActionRegistry());
+            .handleRegisterRestActionsRequest(registerActionsRequest);
         assertEquals(AcknowledgedResponse.class, response.getClass());
         assertTrue(((AcknowledgedResponse) response).getStatus());
     }
 
     public void testHandleRegisterSettingsRequest() throws Exception {
-        ExtensionsManager extensionsManager = new ExtensionsManager(Set.of());
+        Files.write(extensionDir.resolve("extensions.yml"), extensionsYmlLines, StandardCharsets.UTF_8);
+        ExtensionsManager extensionsManager = new ExtensionsManager(settings, extensionDir);
         initialize(extensionsManager);
 
         String uniqueIdStr = "uniqueid1";
@@ -443,79 +439,46 @@ public class ExtensionsManagerTests extends OpenSearchTestCase {
     }
 
     public void testHandleRegisterRestActionsRequestWithInvalidMethod() throws Exception {
-        ExtensionsManager extensionsManager = new ExtensionsManager(Set.of());
+        ExtensionsManager extensionsManager = new ExtensionsManager(settings, extensionDir);
         initialize(extensionsManager);
 
         String uniqueIdStr = "uniqueid1";
         List<String> actionsList = List.of("FOO /foo", "PUT /bar", "POST /baz");
-        List<String> deprecatedActionsList = List.of("GET /deprecated/foo", "It's deprecated!");
-        RegisterRestActionsRequest registerActionsRequest = new RegisterRestActionsRequest(uniqueIdStr, actionsList, deprecatedActionsList);
+        RegisterRestActionsRequest registerActionsRequest = new RegisterRestActionsRequest(uniqueIdStr, actionsList);
         expectThrows(
             IllegalArgumentException.class,
-            () -> extensionsManager.getRestActionsRequestHandler()
-                .handleRegisterRestActionsRequest(registerActionsRequest, actionModule.getDynamicActionRegistry())
-        );
-    }
-
-    public void testHandleRegisterRestActionsRequestWithInvalidDeprecatedMethod() throws Exception {
-        ExtensionsManager extensionsManager = new ExtensionsManager(Set.of());
-        initialize(extensionsManager);
-
-        String uniqueIdStr = "uniqueid1";
-        List<String> actionsList = List.of("GET /foo", "PUT /bar", "POST /baz");
-        List<String> deprecatedActionsList = List.of("FOO /deprecated/foo", "It's deprecated!");
-        RegisterRestActionsRequest registerActionsRequest = new RegisterRestActionsRequest(uniqueIdStr, actionsList, deprecatedActionsList);
-        expectThrows(
-            IllegalArgumentException.class,
-            () -> extensionsManager.getRestActionsRequestHandler()
-                .handleRegisterRestActionsRequest(registerActionsRequest, actionModule.getDynamicActionRegistry())
+            () -> extensionsManager.getRestActionsRequestHandler().handleRegisterRestActionsRequest(registerActionsRequest)
         );
     }
 
     public void testHandleRegisterRestActionsRequestWithInvalidUri() throws Exception {
-        ExtensionsManager extensionsManager = new ExtensionsManager(Set.of());
+        ExtensionsManager extensionsManager = new ExtensionsManager(settings, extensionDir);
         initialize(extensionsManager);
         String uniqueIdStr = "uniqueid1";
         List<String> actionsList = List.of("GET", "PUT /bar", "POST /baz");
-        List<String> deprecatedActionsList = List.of("GET /deprecated/foo", "It's deprecated!");
-        RegisterRestActionsRequest registerActionsRequest = new RegisterRestActionsRequest(uniqueIdStr, actionsList, deprecatedActionsList);
+        RegisterRestActionsRequest registerActionsRequest = new RegisterRestActionsRequest(uniqueIdStr, actionsList);
         expectThrows(
             IllegalArgumentException.class,
-            () -> extensionsManager.getRestActionsRequestHandler()
-                .handleRegisterRestActionsRequest(registerActionsRequest, dynamicActionRegistry)
-        );
-    }
-
-    public void testHandleRegisterRestActionsRequestWithInvalidDeprecatedUri() throws Exception {
-        ExtensionsManager extensionsManager = new ExtensionsManager(Set.of());
-        initialize(extensionsManager);
-        String uniqueIdStr = "uniqueid1";
-        List<String> actionsList = List.of("GET /foo", "PUT /bar", "POST /baz");
-        List<String> deprecatedActionsList = List.of("GET", "It's deprecated!");
-        RegisterRestActionsRequest registerActionsRequest = new RegisterRestActionsRequest(uniqueIdStr, actionsList, deprecatedActionsList);
-        expectThrows(
-            IllegalArgumentException.class,
-            () -> extensionsManager.getRestActionsRequestHandler()
-                .handleRegisterRestActionsRequest(registerActionsRequest, dynamicActionRegistry)
+            () -> extensionsManager.getRestActionsRequestHandler().handleRegisterRestActionsRequest(registerActionsRequest)
         );
     }
 
     public void testHandleExtensionRequest() throws Exception {
-        ExtensionsManager extensionsManager = new ExtensionsManager(Set.of());
+        ExtensionsManager extensionsManager = new ExtensionsManager(settings, extensionDir);
         initialize(extensionsManager);
 
-        ExtensionRequest clusterStateRequest = new ExtensionRequest(ExtensionRequestProto.RequestType.REQUEST_EXTENSION_CLUSTER_STATE);
+        ExtensionRequest clusterStateRequest = new ExtensionRequest(ExtensionsManager.RequestType.REQUEST_EXTENSION_CLUSTER_STATE);
         assertEquals(ClusterStateResponse.class, extensionsManager.handleExtensionRequest(clusterStateRequest).getClass());
 
-        ExtensionRequest clusterSettingRequest = new ExtensionRequest(ExtensionRequestProto.RequestType.REQUEST_EXTENSION_CLUSTER_SETTINGS);
+        ExtensionRequest clusterSettingRequest = new ExtensionRequest(ExtensionsManager.RequestType.REQUEST_EXTENSION_CLUSTER_SETTINGS);
         assertEquals(ClusterSettingsResponse.class, extensionsManager.handleExtensionRequest(clusterSettingRequest).getClass());
 
         ExtensionRequest environmentSettingsRequest = new ExtensionRequest(
-            ExtensionRequestProto.RequestType.REQUEST_EXTENSION_ENVIRONMENT_SETTINGS
+            ExtensionsManager.RequestType.REQUEST_EXTENSION_ENVIRONMENT_SETTINGS
         );
         assertEquals(EnvironmentSettingsResponse.class, extensionsManager.handleExtensionRequest(environmentSettingsRequest).getClass());
 
-        ExtensionRequest exceptionRequest = new ExtensionRequest(ExtensionRequestProto.RequestType.GET_SETTINGS);
+        ExtensionRequest exceptionRequest = new ExtensionRequest(ExtensionsManager.RequestType.GET_SETTINGS);
         Exception exception = expectThrows(
             IllegalArgumentException.class,
             () -> extensionsManager.handleExtensionRequest(exceptionRequest)
@@ -524,13 +487,13 @@ public class ExtensionsManagerTests extends OpenSearchTestCase {
     }
 
     public void testExtensionRequest() throws Exception {
-        ExtensionRequestProto.RequestType expectedRequestType = ExtensionRequestProto.RequestType.REQUEST_EXTENSION_DEPENDENCY_INFORMATION;
+        ExtensionsManager.RequestType expectedRequestType = ExtensionsManager.RequestType.REQUEST_EXTENSION_DEPENDENCY_INFORMATION;
 
         // Test ExtensionRequest 2 arg constructor
         String expectedUniqueId = "test uniqueid";
         ExtensionRequest extensionRequest = new ExtensionRequest(expectedRequestType, expectedUniqueId);
         assertEquals(expectedRequestType, extensionRequest.getRequestType());
-        assertEquals(expectedUniqueId, extensionRequest.getUniqueId());
+        assertEquals(Optional.of(expectedUniqueId), extensionRequest.getUniqueId());
 
         // Test ExtensionRequest StreamInput constructor
         try (BytesStreamOutput out = new BytesStreamOutput()) {
@@ -539,14 +502,14 @@ public class ExtensionsManagerTests extends OpenSearchTestCase {
             try (BytesStreamInput in = new BytesStreamInput(BytesReference.toBytes(out.bytes()))) {
                 extensionRequest = new ExtensionRequest(in);
                 assertEquals(expectedRequestType, extensionRequest.getRequestType());
-                assertEquals(expectedUniqueId, extensionRequest.getUniqueId());
+                assertEquals(Optional.of(expectedUniqueId), extensionRequest.getUniqueId());
             }
         }
 
         // Test ExtensionRequest 1 arg constructor
         extensionRequest = new ExtensionRequest(expectedRequestType);
         assertEquals(expectedRequestType, extensionRequest.getRequestType());
-        assertTrue(extensionRequest.getUniqueId().isEmpty());
+        assertEquals(Optional.empty(), extensionRequest.getUniqueId());
 
         // Test ExtensionRequest StreamInput constructor
         try (BytesStreamOutput out = new BytesStreamOutput()) {
@@ -555,7 +518,7 @@ public class ExtensionsManagerTests extends OpenSearchTestCase {
             try (BytesStreamInput in = new BytesStreamInput(BytesReference.toBytes(out.bytes()))) {
                 extensionRequest = new ExtensionRequest(in);
                 assertEquals(expectedRequestType, extensionRequest.getRequestType());
-                assertTrue(extensionRequest.getUniqueId().isEmpty());
+                assertEquals(Optional.empty(), extensionRequest.getUniqueId());
             }
         }
     }
@@ -655,7 +618,9 @@ public class ExtensionsManagerTests extends OpenSearchTestCase {
     }
 
     public void testAddSettingsUpdateConsumerRequest() throws Exception {
-        ExtensionsManager extensionsManager = new ExtensionsManager(Set.of());
+        Path extensionDir = createTempDir();
+        Files.write(extensionDir.resolve("extensions.yml"), extensionsYmlLines, StandardCharsets.UTF_8);
+        ExtensionsManager extensionsManager = new ExtensionsManager(settings, extensionDir);
         initialize(extensionsManager);
 
         List<Setting<?>> componentSettings = List.of(
@@ -699,7 +664,10 @@ public class ExtensionsManagerTests extends OpenSearchTestCase {
     }
 
     public void testHandleAddSettingsUpdateConsumerRequest() throws Exception {
-        ExtensionsManager extensionsManager = new ExtensionsManager(Set.of());
+
+        Path extensionDir = createTempDir();
+        Files.write(extensionDir.resolve("extensions.yml"), extensionsYmlLines, StandardCharsets.UTF_8);
+        ExtensionsManager extensionsManager = new ExtensionsManager(settings, extensionDir);
         initialize(extensionsManager);
 
         List<Setting<?>> componentSettings = List.of(
@@ -719,7 +687,9 @@ public class ExtensionsManagerTests extends OpenSearchTestCase {
     }
 
     public void testUpdateSettingsRequest() throws Exception {
-        ExtensionsManager extensionsManager = new ExtensionsManager(Set.of());
+        Path extensionDir = createTempDir();
+        Files.write(extensionDir.resolve("extensions.yml"), extensionsYmlLines, StandardCharsets.UTF_8);
+        ExtensionsManager extensionsManager = new ExtensionsManager(settings, extensionDir);
         initialize(extensionsManager);
 
         Setting<?> componentSetting = Setting.boolSetting("falseSetting", false, Property.Dynamic);
@@ -748,7 +718,7 @@ public class ExtensionsManagerTests extends OpenSearchTestCase {
 
     public void testRegisterHandler() throws Exception {
 
-        ExtensionsManager extensionsManager = new ExtensionsManager(Set.of());
+        ExtensionsManager extensionsManager = new ExtensionsManager(settings, extensionDir);
 
         TransportService mockTransportService = spy(
             new TransportService(
@@ -762,7 +732,7 @@ public class ExtensionsManagerTests extends OpenSearchTestCase {
             )
         );
         extensionsManager.initializeServicesAndRestHandler(
-            actionModule,
+            restController,
             settingsModule,
             mockTransportService,
             clusterService,
@@ -773,113 +743,76 @@ public class ExtensionsManagerTests extends OpenSearchTestCase {
 
     }
 
-    public void testIncompatibleExtensionRegistration() throws IOException {
-        ExtensionsManager extensionsManager = new ExtensionsManager(Set.of());
-        Extension firstExtension = new Extension(
-            "firstExtension",
-            "uniqueid1",
-            "127.0.0.0",
-            "9300",
-            "0.0.7",
-            "3.0.0",
-            "3.99.0",
-            List.of(),
-            null
+    public void testOnIndexModule() throws Exception {
+        Files.write(extensionDir.resolve("extensions.yml"), extensionsYmlLines, StandardCharsets.UTF_8);
+        ExtensionsManager extensionsManager = new ExtensionsManager(settings, extensionDir);
+        initialize(extensionsManager);
+
+        Environment environment = TestEnvironment.newEnvironment(settings);
+        AnalysisRegistry emptyAnalysisRegistry = new AnalysisRegistry(
+            environment,
+            emptyMap(),
+            emptyMap(),
+            emptyMap(),
+            emptyMap(),
+            emptyMap(),
+            emptyMap(),
+            emptyMap(),
+            emptyMap(),
+            emptyMap()
         );
-        expectThrows(OpenSearchException.class, () -> extensionsManager.loadExtension(firstExtension));
-        assertEquals(0, extensionsManager.getExtensionIdMap().values().size());
+
+        IndexSettings indexSettings = IndexSettingsModule.newIndexSettings("test_index", settings);
+        IndexModule indexModule = new IndexModule(
+            indexSettings,
+            emptyAnalysisRegistry,
+            new InternalEngineFactory(),
+            new EngineConfigFactory(indexSettings),
+            Collections.emptyMap(),
+            () -> true,
+            new IndexNameExpressionResolver(new ThreadContext(Settings.EMPTY)),
+            Collections.emptyMap()
+        );
+        expectThrows(NodeNotConnectedException.class, () -> extensionsManager.onIndexModule(indexModule));
+
     }
 
-    public void testAdditionalExtensionSettingsForExtensionWithCustomSettingSet() throws Exception {
-        Setting customSetting = Setting.simpleString("custom_extension_setting", "custom_setting", Property.ExtensionScope);
-        ExtensionAwarePlugin extAwarePlugin = new ExtensionAwarePlugin() {
+    public void testIncompatibleExtensionRegistration() throws IOException, IllegalAccessException {
 
-            @Override
-            public List<Setting<?>> getExtensionSettings() {
-                List<Setting<?>> settings = new ArrayList<Setting<?>>();
-                settings.add(customSetting);
-                return settings;
-            }
-        };
-        Set<Setting<?>> additionalSettings = extAwarePlugin.getExtensionSettings().stream().collect(Collectors.toSet());
-        ExtensionScopedSettings extensionScopedSettings = new ExtensionScopedSettings(additionalSettings);
-        Extension firstExtension = new Extension(
-            "firstExtension",
-            "uniqueid1",
-            "127.0.0.0",
-            "9300",
-            "0.0.7",
-            "3.0.0",
-            "3.0.0",
-            List.of(),
-            extensionScopedSettings
-        );
+        try (MockLogAppender mockLogAppender = MockLogAppender.createForLoggers(LogManager.getLogger(ExtensionsManager.class))) {
 
-        ExtensionsManager extensionsManager = new ExtensionsManager(additionalSettings);
-        extensionsManager.loadExtension(firstExtension);
+            mockLogAppender.addExpectation(
+                new MockLogAppender.SeenEventExpectation(
+                    "Could not load extension with uniqueId",
+                    "org.opensearch.extensions.ExtensionsManager",
+                    Level.ERROR,
+                    "Could not load extension with uniqueId uniqueid1 due to OpenSearchException[Extension minimumCompatibleVersion: 3.99.0 is greater than current"
+                )
+            );
 
-        DiscoveryExtensionNode extension = new DiscoveryExtensionNode(
-            "firstExtension",
-            "uniqueid1",
-            new TransportAddress(InetAddress.getByName("127.0.0.1"), 9300),
-            new HashMap<String, String>(),
-            Version.fromString("3.0.0"),
-            Version.fromString("3.0.0"),
-            List.of()
-        );
-        DiscoveryExtensionNode initializedExtension = extensionsManager.getExtensionIdMap().get(extension.getId());
-        assertEquals(extension.getName(), initializedExtension.getName());
-        assertEquals(extension.getId(), initializedExtension.getId());
-        assertTrue(extensionsManager.lookupExtensionSettingsById(extension.getId()).isPresent());
-        assertEquals(
-            "custom_setting",
-            extensionsManager.lookupExtensionSettingsById(extension.getId()).get().getAdditionalSettings().get(customSetting)
-        );
-    }
+            List<String> incompatibleExtension = Arrays.asList(
+                "extensions:",
+                "   - name: firstExtension",
+                "     uniqueId: uniqueid1",
+                "     hostAddress: '127.0.0.0'",
+                "     port: '9300'",
+                "     version: '0.0.7'",
+                "     opensearchVersion: '3.0.0'",
+                "     minimumCompatibleVersion: '3.99.0'"
+            );
 
-    public void testAdditionalExtensionSettingsForExtensionWithoutCustomSettingSet() throws Exception {
-
-        Set<Setting<?>> additionalSettings = extAwarePlugin.getExtensionSettings().stream().collect(Collectors.toSet());
-        ExtensionScopedSettings extensionScopedSettings = new ExtensionScopedSettings(additionalSettings);
-        Extension firstExtension = new Extension(
-            "secondExtension",
-            "uniqueid2",
-            "127.0.0.0",
-            "9301",
-            "0.0.7",
-            "2.0.0",
-            "2.0.0",
-            List.of(),
-            extensionScopedSettings
-        );
-
-        ExtensionsManager extensionsManager = new ExtensionsManager(additionalSettings);
-        extensionsManager.loadExtension(firstExtension);
-
-        DiscoveryExtensionNode extension = new DiscoveryExtensionNode(
-            "secondExtension",
-            "uniqueid2",
-            new TransportAddress(InetAddress.getByName("127.0.0.1"), 9301),
-            new HashMap<String, String>(),
-            Version.fromString("2.0.0"),
-            Version.fromString("2.0.0"),
-            List.of()
-        );
-        DiscoveryExtensionNode initializedExtension = extensionsManager.getExtensionIdMap().get(extension.getId());
-        assertEquals(extension.getName(), initializedExtension.getName());
-        assertEquals(extension.getId(), initializedExtension.getId());
-        assertTrue(extensionsManager.lookupExtensionSettingsById(extension.getId()).isPresent());
-        assertEquals(
-            "none",
-            extensionsManager.lookupExtensionSettingsById(extension.getId()).get().getAdditionalSettings().get(customSetting)
-        );
+            Files.write(extensionDir.resolve("extensions.yml"), incompatibleExtension, StandardCharsets.UTF_8);
+            ExtensionsManager extensionsManager = new ExtensionsManager(settings, extensionDir);
+            assertEquals(0, extensionsManager.getExtensionIdMap().values().size());
+            mockLogAppender.assertAllExpectationsMatched();
+        }
     }
 
     private void initialize(ExtensionsManager extensionsManager) {
         transportService.start();
         transportService.acceptIncomingRequests();
         extensionsManager.initializeServicesAndRestHandler(
-            actionModule,
+            restController,
             settingsModule,
             transportService,
             clusterService,
